--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,4 @@ versionBuild=0
 
 commonsCollectionsVersion=3.2.1
 commonsLang3=3.0
-springDataVersion=1.2.0.BUILD-SNAPSHOT
+springVersion=3.1.2.RELEASE
