--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name='phantombox-broker'
 
 include 'phantombox-broker-api'
-include 'phantombox-broker-domain'
-include 'phantombox-broker-consumer'
-include 'phantombox-broker-producer'
+include 'phantombox-broker-impl'
+//include 'phantombox-broker-domain'
+//include 'phantombox-broker-consumer'
+//include 'phantombox-broker-producer'
