--- a/phantombox-broker-impl/build.gradle
+++ b/phantombox-broker-impl/build.gradle
@@ -24,16 +24,13 @@ dependencies {
     compile("org.springframework:spring-tx:${springVersion}")
     compile("org.springframework:spring-aspects:${springVersion}")
     compile("org.springframework:spring-test:${springVersion}")
+    compile("org.springframework:spring-jms:${springVersion}")
+    compile('org.apache.xbean:xbean-spring:3.11')
 
     compile('org.aspectj:aspectjtools:1.6.2')
     compile('org.aspectj:aspectjrt:1.6.12')
 
-    //compile('org.apache.camel:camel-core:2.9.2')
-    //compile('org.apache.camel:camel-jms:2.9.2')
-    //compile('org.apache.camel:camel-spring:2.9.2')
 
-    compile('org.apache.activemq:activemq-camel:5.6.0')
-    compile("org.springframework:spring-jms:${springVersion}")
     compile('org.apache.activemq:activemq-all:5.6.0')
     compile('org.apache.activemq:activemq-pool:5.6.0')
 
