--- a/phantombox-broker-api/build.gradle
+++ b/phantombox-broker-api/build.gradle
@@ -12,6 +12,10 @@ compileJava.dependsOn('loadProperties')
 
 dependencies {
 
+    compile('com.git.phantombox:phantombox-domain-api:1.0.0')
+    compile('com.git.phantombox:phantombox-domain-impl:1.0.0')
+    compile('com.git.phantombox:phantombox-domain-util:1.0.0')
+
     compile("org.springframework:spring-jms:${springVersion}")
     compile('org.apache.activemq:activemq-all:5.6.0')
     compile('org.apache.activemq:activemq-pool:5.6.0')
