--- a/phantombox-broker-impl/build.gradle
+++ b/phantombox-broker-impl/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'eclipse'
+
 task loadProperties << {
     def userProps = new Properties()
     userProps.load(new FileInputStream("$rootProject.projectDir/gradle.properties"))
@@ -29,7 +31,7 @@ dependencies {
 
     compile('org.aspectj:aspectjtools:1.6.2')
     compile('org.aspectj:aspectjrt:1.6.12')
-
+    compile('jgoodies:forms:1.0.5')
 
     compile('org.apache.activemq:activemq-all:5.6.0')
     compile('org.apache.activemq:activemq-pool:5.6.0')
